# crappy-shop

./: Cargo.toml  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
entity/: Cargo.toml
entity/src/entities/: cart.rs  cart_item.rs  mod.rs  prelude.rs  product.rs  user.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20241205_083431_create_table_user.rs  m20241205_084432_create_table_product.rs  m20241208_041250_seed_example_products.rs  m20241210_100816_add_table_cart.rs  m20241210_101849_add_table_cart_item.rs
src/: config.rs  database.rs  environment.rs  main.rs  middleware.rs
src/application/: mod.rs
src/application/cart/: aggregate.rs  command.rs  mod.rs  service.rs
src/application/user/: aggregate.rs  appregate.rs  command.rs  mod.rs  service.rs
src/domain/cart/: aggregate.rs  error.rs  event.rs  mod.rs
src/domain/product/: error.rs  mod.rs  view.rs
src/domain/user/: aggregate.rs  error.rs  event.rs  mod.rs  view.rs
src/infrastructure/: error.rs  mod.rs  response.rs
src/infrastructure/cart/: error.rs  handler.rs  mod.rs  repository.rs
src/infrastructure/product/: error.rs  handler.rs  mod.rs  repository.rs
src/infrastructure/user/: error.rs  handler.rs  input.rs  mod.rs  repository.rs
