[package]
name = "crappy_shop"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
actix-web = "4.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
sea-orm = { version = "1.1.2", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
log = "0.4.22"
urlencoding = { version = "2.1.3", features = [] }
dotenvy = "0.15.7"
do-notation = "0.1.3"
async-trait = "0.1.83"
bcrypt = "0.16.0"
validator = { version = "0.19", features = ["derive"] }
jsonwebtoken = "9.3.0"
futures-util = "0.3.31"
env_logger = "0.11.5"
