[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
entity = { path = "../entity" }
fake = { version = "3.0.1", features = ["derive"] }
rust_decimal = "1.36.0"
async-std = { version = "1", features = ["attributes", "tokio1"] }

[dependencies.sea-orm-migration]
version = "1.1.2"
features = [
  "sqlx-postgres",
  "runtime-tokio-native-tls",
]
